Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31319

Qt Creator blocks while "Stop running program"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 15.0.0
    • Qt Creator 14.0.0-rc1
    • Remote Linux
    • None
    • Linux/Wayland
    • cfdb2695f (master)

    Description

      Qt Creator blocks after clicking "Stop running program" and around 50% of the cases the Window Manager pops a "Qt Creator not responding" dialog

      Steps to reproduce

      • Open a project with Remote Linux target
      • Click Run
      • Click "Stop running program"
      • Click on Qt Creator gui

      This is more noticeable if the program hangs or takes more than 6 seconds to close

      Attachments

        1. CMakeLists.txt
          0.3 kB
          Gabriel Espinoza
        2. main.cpp
          0.3 kB
          Gabriel Espinoza

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-31319
          # Subject Branch Project Status CR V

          Activity

            People

              kandeler Christian Kandeler
              virtuosonic Gabriel Espinoza
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes