ProjectExplorer: Do not block when stopping a process

... in SimpleTargetRunner.
The whole infrastructure is async, so it makes no sense to block in the
stop() function.
As a side effect, get rid of the no longer needed differentiation
between local and remote processes.

Fixes: QTCREATORBUG-31319
Change-Id: I53adec6c14d602b1178d71446a90cbb2b3391ccd
Reviewed-by: hjk <hjk@qt.io>